@@ -8,6 +8,8 @@ Changes in ccaPP version 0.2.1
     
     + Slightly faster version of fastMedian().
     
+    + Function permTest() now allows to supply permutations as an argument.
+    
     + Bugfix in functions for CCA concerning side constraints for higher order 
       canonical correlations.
     
@@ -15,6 +17,9 @@ Changes in ccaPP version 0.2.1
       correlations no longer standardized.
     
     + Bugfix in corM(): robust starting values now work with dummy variables.
+    
+    + Renamed internal C++ function rank() to fix error with clang++ under 
+      OS X Mavericks.
 
 
 Changes in ccaPP version 0.2.0
